# afex_app

./: .gitattributes  .gitignore  Procfile  README.md  build.sh  manage.py  pyproject.toml  render.yml  requirements.txt
afex_app/: asgi.py  settings.py  storage_backends.py  urls.py  versioned_urls.py  wsgi.py
afex_app/settings/: base.py  base_settings.py  development.py  production.py
chats/: managers.py  models.py  serializers.py  views.py
chats/migrations/: 0001_initial.py  0002_chat_respond_to_alter_chat_message.py  0003_alter_chat_file.py  0004_alter_chat_file.py
chats/tests/: integration_tests.py
common_app/: exceptions.py  models.py  pagination.py  serializers.py  validators.py
common_app/mixins/: manager_mixins.py  serializer_mixins.py
common_app/utils/: general_utils.py  test_utils.py
exceptions_and_logging/: apps.py  exc_handler.py  exceptions.py  logging.py  serializers.py  tasks.py  urls.py  views.py
exceptions_and_logging/tests/: integration_tests.py
mediafiles/: a_file_NyElybb.txt
registration/: admin.py  apps.py  authentication.py  exceptions.py  managers.py  models.py  policies.py  serializers.py  tasks.py  utils.py
registration/messages/: error_messages.py
registration/migrations/: 0001_initial.py  0002_user_friends.py  0003_remove_user_confirmed_at.py
registration/tests/: integration_tests.py  unit_tests.py
registration/views/: registration.py  user.py
static/templates/drf_spectacular/: swagger_ui.html
